Started debugging addition function

--- a/force-app/main/default/classes/VariablesDataTypesOperators.cls
+++ b/force-app/main/default/classes/VariablesDataTypesOperators.cls
@@ -31,9 +31,18 @@ public with sharing class VariablesDataTypesOperators {
      * @param b The second number.
      * @return The sum of the two numbers, or null if either number is null.
      */
+
     public static Integer addition(Integer a, Integer b) {  
-        return null; // Replace null with the variable you used to store the result
+
+        if (a == null || b == null) {
+            return null;
+        }
+        s = a + b;
+        return s;
+        // return null; // Replace null with the variable you used to store the result
     }
+    /**This is Julie */
+
 
     /**
      * Question 2
