I am your father

--- a/force-app/main/default/classes/VariablesDataTypesOperators.cls
+++ b/force-app/main/default/classes/VariablesDataTypesOperators.cls
@@ -37,8 +37,10 @@ public with sharing class VariablesDataTypesOperators {
         if (a == null || b == null) {
             return null;
         }
-        s = a + b;
-        return s;
+        y = a + b;
+        return y;
+
+        // Practice pull request
         // return null; // Replace null with the variable you used to store the result
     }
     /**This is Julie */
